stylesheet.css
/*Created by: Nicola Roundill
Victoria University 2015
MDDN 352
Ubiqutious Computing*/

/*
CSS for banner section
*/
.bannerImage {
	max-height: 500px;
	min-height: 100px;
	overflow: hidden;
	border: 0 none;
	box-shadow: none;
	padding: 0;
	margin: 0;
	background: 000;
}

.bannerDiv {
	max-height: 400px;
}

/*
CSS for recipe steps
*/

.recipeImage {
	max-height: 400px;
	max-width: 400px;
	overflow: hidden;
	border: 0 none;
	box-shadow: none;
	padding: 20px;
	margin: auto;
}

.recipeDiv {
	max-height: 700px;
	min-height: 200px;
}

.headerFooter{
	max-height: 100px;
	min-height: 50px;
}

/* Custom font set up. Font retrieved from http://www.dafont.com/djb-rubias-tiny-script.font?text=messy+kitchen&back=theme */
@font-face{
	font-family: "messy";
	src: url("src/fonts/DJB_Rubia's_Tiny_Script.ttf");
}

h1 {
	font-family: "messy", Verdana, Tahoma;
	font-size: 5em;
	max-height: 300px;	

	text-align: center;
	color: #ffffff;
	text-shadow: 3px 3px 5px #111;
}

p {
	font-family: Arial, Verdana, Tahoma;
	font-size: 1.8em;
	text-align: left;
	color: #6a5d50;
}

.thumbnail {
	background: #999083;
}

.borderProperties {
	border: 2px dashed #666;
	padding: 30px;
}

.outerBorder {
	padding-top: 20px;
	padding-left: 20px;
	padding-bottom: 5px;
	padding-right: 20px;
	border: 0 none;
	box-shadow: 10px 10px 20px;
}

body {
	background-color: #2f2c28;
}

#parallax1 {
	position: fixed;
	z-index: -2;
	max-height: 200px;
	max-width: 32px;
	opacity: 0.95;
	width: 50%;
	left: 5%;
}

#parallax2 {
	position: fixed;
	z-index: -3;
	max-height: 200px;
	max-width: 40px;
	opacity: 0.3;
	width: 50%;
	left: 17%;

}

#parallax3 {
	position: fixed;
	z-index: -3;
	max-height: 200px;
	max-width: 40px;
	opacity: 0.2;
	width: 50%;
	left: 34%;
}

#parallax4 {
	position: fixed;
	z-index: -3;
	max-height: 200px;
	max-width: 40px;
	opacity: 0.75;
	width: 50%;
	left: 51%;
}

#parallax5 {
	position: fixed;
	z-index: -3;
	max-height: 200px;
	max-width: 40px;
	opacity: 0.6;
	width: 50%;
	left: 68%;
}

#parallax6 {
	position: fixed;
	z-index: -3;
	max-height: 200px;
	max-width: 40px;
	opacity: 0.8;
	width: 50%;
	left: 90%;
}

#content_layer{
	position: absolute;
}

.ingreIcon {
	max-width: 100px;
	max-height: 100px;
	margin: auto;
}

